--- a/reoswpui/schedule-item-list/schedule-item-list.template.html
+++ b/reoswpui/schedule-item-list/schedule-item-list.template.html
@@ -1,8 +1,11 @@
 <ul ng-repeat="scheduleItem in scheduleItems.scheduleItems.results" >
+	<li> ${{ scheduleItem.schedule_item_amount }} </li>
 	<li> {{ scheduleItem.schedule_item_description }} </li>
 	<li> {{ scheduleItem.schedule_item_id }} </li>
 	<li> {{ scheduleItem.schedule_item_status }} </li>
 	<li> {{ scheduleItem.organization_id }} </li>
+	<li> {{ scheduleItem.schedule_item_date }} </li>
+
 	<button ng-click="scheduleItems.suspendScheduleItem(scheduleItem)" style="cursor: pointer"> Suspend Schedule </button>
 	<button ng-click="scheduleItems.activateScheduleItem(scheduleItem)"style="cursor: pointer"> Resume Schedule Item </button>
 </ul>
