--- a/reoswpui/customer-list/customer-list.template.html
+++ b/reoswpui/customer-list/customer-list.template.html
@@ -9,12 +9,12 @@
 
 
 <ul ng-repeat="customer in customers.customers.results | filter: customers.query | orderBy: customers.customerProp">
-	<li> {{ customer.first_name }} </li>
-	<li> {{ customer.last_name }} </li>
-	<li> {{ customer.default_billing_address_token }} </li>
-	<li> {{ customer.organization_id }} </li>
-	<li> {{ customer.customer_token }} </li>
-	<li> {{ customer.links.schedules }} </li>
+	<li> First Name: {{ customer.first_name }} </li>
+	<li> Last Name: {{ customer.last_name }} </li>
+	<li> Billing Token: {{ customer.default_billing_address_token }} </li>
+	<li> Organization ID: {{ customer.organization_id }} </li>
+	<li> Customer Token: {{ customer.customer_token }} </li>
+	<li> Schedules: {{ customer.links.schedules }} </li>
 
 	<a href="#!/customers/{{customer.customer_token}}/schedules" style="color: blue; cursor: pointer"> Customer Schedules </a>
 </ul> 
